[Changes for 1.?? - ? ???, 2005]

* "svk add" now displays "- (bin)" if the svn:mime-type of the file
  being added is a non text type.

[Changes for 1.02 - 2 Aug, 2005]

* "svk mirror" now supports moving mirror points with "svk mv".

* "svk co" now resumes checkouts from where it left off if it gets
  interrupted mid-way.

* "svk commit", "svk smerge" and other commands that accept commit
  messages now accept a --template option, to provide a customised file
  for commit messages.

* SVK's documentation is now up to date with the "svk reference"
  section of the work-in-progress SVK book.

* "Silent errors" from output of subversion repository hooks are
  now reported.

* "svk status" now supports some additional options found in "svn
  status": --non-recursive to only list changes in the current
  directory, and --no-ignore to display files which are normally ignored
  due to a 'svn:ignore' property or rule.

* "svk describe" accepts the "r12345" revision number form, for ease
  of use.

* New -q (quiet) option to svk copy.

* The -q (quiet) option to "svk status" now also hides files missing
  in working copy (previously this just suppressed output for unknown
  files in the working copy).

* Confusing messages generated by "svk update" that really applied
  only to "svk merge" are no longer printed by "svk update".

* Make "svk revert" work in a few cases where it didn't before, with
  moved files in the working copy.

* "svk ci --import" now replace symlinks with files properly.

* "svk mv" is now more careful about making sure that the target path
  exists.

* "svk rm" across multiple depot paths could cause svk to hang.

* "svk propset" now works directly on mirrored paths.

* Various commands that would silently ignore excess arguments now
  raise errors.

* Specifying a revision for "svk propset" and "svk propedit" commands
  is now correctly disallowed on checkout paths.

* Using "svk smerge" without all of your mirrored paths up to date